--- a/app.json
+++ b/app.json
@@ -39,7 +39,15 @@
           }
         }
       ],
-      "@react-native-community/datetimepicker"
+      "@react-native-community/datetimepicker",
+      [
+        "expo-build-properties",
+        {
+          "android": {
+            "extraMavenRepo": "https://jitpack.io"
+          }
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true,
